# x-qemu-kvm

./: README.md  pyproject.toml
config/: vmctl-config-example.yaml
scripts/: example_api_usage.py  example_cli_usage.sh
src/api/: main.py
src/api/routers/: vms.py
src/cli/: main.py
src/cli/commands/: vm.py
src/core/: exceptions.py  hypervisor.py
src/models/: vm.py
src/services/: vm_service.py
tests/: __init__.py
tests/unit/: test_vm_models.py
